# django-profanity-filter

./: README.rst  setup.cfg
django_profanity_check.egg-info/: PKG-INFO  SOURCES.txt
profanity_filter/: apps.py  tests.py  views.py
profanity_filter/migrations/: 0001_initial.py  0002_delete_content.py
profanity_filter/profanity_tags/: profanity_check.py
